# esp32s3-remote-display

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/web/: index.html  login.html
